# qa-auto-engineer-python-project-241

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  cli_processing.py  engine.py
gendiff/scripts/: gendiff.py
