[project]
name = "hexlet-code"
version = "0.1.0"
authors = [
    {name = "Alexander Evseev"},
]
description = '''\"Difference Calculator" is a program that determines the differences between two data structures.

Utility features:

Support for various input formats: YAML, JSON
Report generation in plain text, stylish, and JSON formats'''
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
